# animoids

./: .gitignore  .gitmodules  README.md  design.excalidraw  flow.excalidraw  getHash  module.coophive  system.excalidraw
src/foundry/: foundry.toml
src/foundry/broadcast/Deploy.s.sol/1337/: run-1717105056.json  run-1717105336.json
src/foundry/script/: Deploy.s.sol  DeployGaladriel.s.sol  DeployHive.s.sol
src/foundry/src/galadriel/: OpenAiChatGptVision.sol  VisionAgent.sol
src/foundry/src/hive/: DfVideoScanner.sol  ICoopHiveJobClient.sol  ICoopHiveJobManager.sol
src/nextjs/animoid-ui/: .env_sample  .gitignore  .pnp.cjs  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  wagmi.config.ts  wagmi.config.ts.bck
src/nextjs/animoid-ui/src/__tests__/: analyzeActions.test.ts  cidValidator.test.ts
src/nextjs/animoid-ui/src/app/: head.tsx  layout.tsx  page.tsx
src/nextjs/animoid-ui/src/app/analyze/: actions.tsx  page.tsx
src/nextjs/animoid-ui/src/components/: title.tsx
src/nextjs/animoid-ui/src/components/upload/: fileUpload.tsx
src/nextjs/animoid-ui/src/components/wallet/: Connect.tsx  Custom.tsx  CustomConnect.tsx  Web3ModalProvider.tsx  wagmiConfig.tsx  web3modal.tsx
src/nextjs/animoid-ui/src/lib/: dfDetection.tsx  inference.tsx  ipfs.tsx  upload.tsx  utils.ts  utils.tsx
src/nextjs/animoid-ui/src/lib/chain/: utils.ts
src/nextjs/animoid-ui/src/lib/ipfs/: lighthouse.tsx  utils.tsx  web3storage.tsx
src/python/: Dockerfile  ai.py  prompt.yaml  pyproject.toml
submissionpack/: Presentation.pptx  ~$Presentation.pptx
(+11 files in other folders)
